# Dithering

./: .gitignore  CMakeLists.txt  README.md  build.sh  file.txt
src/: client.cpp  client.h  image_processing.cpp  image_processing.h  main.cpp  server.cpp  server.h
web/: interface.html
